# ddobakddobak

./: .env.example  .gitignore  4교시백업.md  CLAUDE.md  Caddyfile  Procfile  README.md  app-server.sh  config.yaml  dev.sh  html2ppt.md  idea.md  배포가이드.md
.antigravitycli/: 4f20d7b1-a333-46ab-afde-fa68accc649d.json
.claude/: settings.json
.claude/agents/: claude-main.md
.claude/commands/: wbs.md
.claude/skills/dev-team/: SKILL.md
.claude/skills/dev-test/: SKILL.md
.claude/skills/port-spec/: SKILL.md
.github/workflows/: build.yml  e2e.yml
backend/: Dockerfile  Gemfile
backend/.bundle/: config
backend/app/channels/: chat_channel.rb  transcription_channel.rb
backend/app/controllers/: application_controller.rb
backend/app/jobs/: agenda_extraction_job.rb  agenda_reference_job.rb  audio_upload_job.rb  card_extraction_job.rb  embed_backfill_job.rb  embed_transcript_job.rb  file_transcription_job.rb  folder_chat_job.rb  host_auto_promote_job.rb  host_grace_period_job.rb  meeting_chat_job.rb  meeting_finalizer_job.rb  meeting_summarization_job.rb  re_diarize_job.rb  schedule_rollover_job.rb  summarization_job.rb  transcription_job.rb
backend/cache/: projects.json
backend/config/: application.rb  credentials.yml.enc  database.yml  master.key  puma.rb  queue.yml  recurring.yml  routes.rb
backend/db/: schema.rb  seeds.rb
backend/spec/: rails_helper.rb
docs/: PRD.md  TRD.md  claude-memory-export-2026-07-18.md  competitor-gap-2026-06-18.md  dflow-integration-guide.md  diarization-research-2026-06.md  features.md  folder-feature-plan.md  idea.md  impact-backend-relocation-stt-scaleout.md  rails-server-tauri-client-architecture.md  realtime-summary-cleanup-kickoff.md  realtime-summary-hybrid-decisions.md  realtime-summary-hybrid-kickoff.md  realtime-summary-hybrid-plan.md  realtime-summary-hybrid-spec-final.md  refactor-roadmap.md  speaker-diarization-research.md  stt-batch-engine-experiments-2026-06.md  tauri-desktop-app-guide.md  tauri-desktop-app-plan.md  wbs.md  기능-인벤토리.md  또박또박-소개.pptx  사용자매뉴얼.md  윈도우-서버-WSL2-배포가이드.md  윈도우-서버-운영가이드.md  회의록-양식.md
docs/landing/: index.html
docs/research/: 2026-05-29-mobile-free-llm-summary.md  2026-06-21-feature-candidates-decision-guide.md  MSA-단점-교차검증.pptx  msa-단점-교차검증.md
docs/superpowers/: 2026-06-13-diarization-accuracy-decisions.md  2026-06-13-diarization-followups.md  2026-06-14-diarization-separation-decisions.md  2026-06-14-diarization-separation-kickoff.md  2026-06-14-next-steps-handoff.md  2026-06-14-session2-handoff.md  youtube-transcript.md
docs/v2/: PRD.md  TRD.md
docs/회의록샘플/: FMES-Qwen3.5-27B..md  FMES_통합회의록.md  원판중량-Claude.md  원판중량-Qwen3.5-27B.md
e2e/: global-setup.ts  package.json  playwright.config.ts  tsconfig.json
e2e/fixtures/: auth.fixture.ts  data.fixture.ts  index.ts
e2e/helpers/: api.ts  auth.ts  mock.ts  selectors.ts
e2e/stubs/: sidecar_stub.py
e2e/tests/: auth.spec.ts  export.spec.ts  meeting.spec.ts  minutes.spec.ts  pipeline.spec.ts  summary-fullview.spec.ts  team.spec.ts
frontend/: .env.test  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: audio-processor.js  mic-pcm-forwarder.js  system-audio-injector.js  vad-processor.js
frontend/src/: App.test.tsx  App.tsx  actioncable.d.ts  config.ts  html2pdf.d.ts  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: assertion.rs  bridge.rs  cohere_ffi.rs  environment.rs  lib.rs  main.rs  mdns.rs  model_path.rs  network.rs  services.rs  stt.rs  sync_ext.rs  text_post.rs  tray.rs  window_cmd.rs
frontend/src-tauri/src/audio/: capture_macos.rs  capture_windows.rs  mod.rs  recorder.rs  resample.rs
frontend/src-tauri/src/scheduler/: mod.rs
sidecar/: REFACTOR_ANALYSIS.md  pyproject.toml
sidecar/app/: audio_constants.py  bootstrap.py  config.py  deps.py  engines.py  env_utils.py  main.py  schemas.py
sidecar/app/diarization/: __init__.py  batch_processor.py  device.py  overlap.py  speaker.py  speaker_db.py  speakrs_runner.py  whisperx_processor.py
sidecar/app/embeddings/: encoder.py
sidecar/app/llm/: __init__.py  markdown_postprocess.py  prompts.py  summarizer.py
sidecar/app/routers/: embeddings.py  health.py  llm.py  settings.py  speakers.py  stt.py
sidecar/app/stt/: audio_utils.py  base.py  factory.py  faster_whisper_adapter.py  idle_offload.py  lang_utils.py  mlx_whisper_adapter.py  mlx_whisper_beam_adapter.py  mock_adapter.py  qwen3_adapter.py  qwen3_transformers_adapter.py  sentence_segmenter.py  whisper_adapter.py
sidecar/speakrs-cli/: Cargo.toml
sidecar/speakrs-cli/src/: main.rs
sidecar/tests/: test_batch_processor.py  test_deps_diarizer.py  test_device.py  test_diarize_file_endpoint.py  test_embeddings_pool.py  test_embeddings_router.py  test_engine_detect.py  test_faster_whisper_adapter_idle.py  test_faster_whisper_adapter_lang.py  test_gpu_lock_interleaving.py  test_health.py  test_idle_offload.py  test_lang_utils.py  test_main_idle_offload.py  test_markdown_postprocess.py  test_mock_adapter.py  test_overlap.py  test_qwen3_adapter.py  test_qwen3_adapter_lang.py  test_qwen3_transformers_adapter.py  test_qwen3_transformers_adapter_idle.py  test_refine_locks.py  test_speaker_db.py  test_speaker_diarization.py  test_speaker_matching.py  test_speakers_router.py  test_speakrs_runner_threshold.py  test_stt_factory.py  test_summarizer.py  test_summarizer_format.py  test_transcribe_file_progress.py  test_warmup.py  test_whisper_adapter.py  test_whisper_adapter_lang.py  test_ws_transcribe.py
tasks/backend-refactor/: context.md  log.md
tasks/dflow-minutes-upload/: log.md
tasks/frontend-refactor/: context.md  log.md  plan.md
tasks/idea-29-30/: state.md
tasks/idea-33-chat-expand-md/: brief.md  report.md  review-package-r2.diff  review-package.diff
tasks/realtime-summary-hybrid/: log.md  task.md
tasks/rewrite-personal-app-research/: log.md  task.md
tasks/verify-dark-css/: brief.md  log.md  result.md
tests/: test_tsk_00_05_infra.sh
(+1344 files in other folders)
