[project]
name = "sidecar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.135.2",
    "torch>=2.4",
    "mlx==0.31.2; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-metal==0.31.2; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "more-itertools>=11.1.0",
    "numpy>=1.26.0",
    "openai>=2.30.0",
    "pydantic-settings>=2.13.1",
    "pywhispercpp>=1.4.1",
    "pyyaml>=6.0",
    "tiktoken>=0.13.0",
    "uvicorn>=0.42.0",
]

[project.optional-dependencies]
# macOS Apple Silicon: MLX 기반 Qwen3-ASR + whisper.cpp + 화자 분리
macos = [
    "mlx-audio>=0.4.1",
    "mlx-lm>=0.31.1",
    "pywhispercpp>=1.4.1",
]
# Windows/Linux NVIDIA GPU: Qwen3-ASR(transformers) + faster-whisper (CUDA)
# transformers·qwen-asr는 맥에선 mlx-lm 전이 의존으로 들어오지만 Linux엔 없어 명시 필요
cuda = [
    "faster-whisper>=1.1.0",
    "transformers>=4.51",
    "qwen-asr>=0.0.6",
]
# Windows/Linux CPU 전용: whisper.cpp만 (화자 분리 비활성화)
cpu = [
    "pywhispercpp>=1.4.1",
]

[tool.uv]
# 플랫폼 배타 extras: macos(MLX, transformers>=5)와 cuda(qwen-asr→transformers==4.57 고정)는 동시 설치 불가
conflicts = [[{ extra = "cuda" }, { extra = "macos" }]]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
