[project]
name = "sidecar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.135.2",
    "torch>=2.4",
    "mlx==0.31.2; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-metal==0.31.2; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "more-itertools>=11.1.0",
    "numpy>=1.26.0",
    "openai>=2.30.0",
    "pydantic-settings>=2.13.1",
    "pywhispercpp>=1.4.1",
    "pyyaml>=6.0",
    "tiktoken>=0.13.0",
    "uvicorn>=0.42.0",
]

[project.optional-dependencies]
# macOS Apple Silicon: MLX 기반 Qwen3-ASR + whisper.cpp + 화자 분리
macos = [
    "mlx-audio>=0.4.1",
    "mlx-lm>=0.31.1",
    "pywhispercpp>=1.4.1",
]
# Windows/Linux NVIDIA GPU: Qwen3-ASR(transformers) + faster-whisper (CUDA)
# transformers·qwen-asr는 맥에선 mlx-lm 전이 의존으로 들어오지만 Linux엔 없어 명시 필요
cuda = [
    "faster-whisper>=1.1.0",
    # ctranslate2 4.5+는 cuDNN 9 + cuBLAS 12 사용 — torch가 끌어오는 nvidia-cudnn 9.x를 그대로 공유.
    # (4.4까지는 cuDNN 8 필요 → cuDNN 9만 있는 venv에서 dlopen 실패 시 프로세스 통째 abort 사고.
    #  2026-07-17 meeting 78. 사전검사 가드는 factory._ctranslate2_cudnn_ok 참조.)
    # 실행 시 LD_LIBRARY_PATH에 .venv/.../nvidia/{cublas,cudnn}/lib 추가 필요 (systemd 유닛 참고)
    "ctranslate2>=4.5",
    "transformers>=4.51",
    "qwen-asr>=0.0.6",
    "nvidia-cublas-cu12; sys_platform == 'linux'",
    # speakrs-cli CUDA 모드(ort CUDA EP)가 요구하는 CUDA 12 런타임 — cudart·cufft·curand.
    # 파이썬 의존은 아니지만 venv nvidia/ 폴더를 LD_LIBRARY_PATH 공급원으로 재사용 (uv sync 재현성)
    "nvidia-cuda-runtime-cu12; sys_platform == 'linux'",
    "nvidia-cufft-cu12; sys_platform == 'linux'",
    "nvidia-curand-cu12; sys_platform == 'linux'",
]
# Windows/Linux CPU 전용: whisper.cpp만 (화자 분리 비활성화)
cpu = [
    "pywhispercpp>=1.4.1",
]
# vLLM 서빙 백엔드 (CUDA 전용, 대용량 — 설치는 별도 승인 후)
# vllm은 linux 전용 wheel만 배포 — 마커 없으면 darwin에서 유니버설 해상도가 실패한다
vllm = ["qwen-asr[vllm]>=0.0.6; sys_platform == 'linux'"]

[tool.uv]
# 플랫폼 배타 extras: macos(MLX, transformers>=5)와 cuda(qwen-asr→transformers==4.57 고정)는 동시 설치 불가
# cuda↔vllm 배타는 과거 ctranslate2 4.4의 cudnn<9 pin에서 유래 — ctranslate2>=4.5(cuDNN 9)로
# pin은 사라졌지만 프로필 단순화(설치 용량·검증 범위)를 위해 유지.
conflicts = [
    [{ extra = "cuda" }, { extra = "macos" }],
    [{ extra = "vllm" }, { extra = "macos" }],
    [{ extra = "cuda" }, { extra = "vllm" }],
]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
