[package]
name = "ddobakddobak"
version = "0.1.0"
description = "또박또박 - AI 회의록 서비스"
authors = ["jji"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10", features = [] }
tauri-plugin-log = "2.8"
tauri-plugin-shell = "2.3"
tauri-plugin-fs = "2.4"
tauri-plugin-dialog = "2"
dirs = "6"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
base64 = "0.22"
rubato = "0.15"
cpal = { version = "0.15", features = [] }
hound = "3.5"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "1.5"
