[package]
name = "ddobakddobak"
version = "0.1.0"
description = "또박또박 - AI 회의록 서비스"
authors = ["jji"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10", features = [] }
tauri-plugin-log = "2.8"
tauri-plugin-shell = "2.3"
tauri-plugin-fs = "2.4"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
dirs = "6"
base64 = "0.22"
if-addrs = "0.13"

# 데스크톱 전용: GUI PATH 보정 + 네이티브 오디오 캡처 (모바일은 webview getUserMedia 사용)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
cpal = { version = "0.15", features = [] }
hound = "3.5"
rubato = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "1.5"
