[package]
name = "ddobakddobak"
version = "0.1.0"
description = "또박또박 - AI 회의록 서비스"
authors = ["jji"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10", features = [] }
tauri-plugin-log = "2.8"
tauri-plugin-shell = "2.3"
tauri-plugin-fs = "2.4"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
dirs = "6"
base64 = "0.22"
if-addrs = "0.13"

# 인앱 루프백 리버스 프록시(모바일 브릿지) — 모든 타겟에서 컴파일 (호스트 유닛테스트 포함)
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync"] }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.24"
# 평문 HTTP 전용 — native-tls/openssl 회피(안드로이드 안전).
# reqwest 0.12는 HTTP/1을 항상 포함하므로 별도 feature 불필요 (http2만 opt-in).
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
futures-util = "0.3"
mdns-sd = "0.11"
hostname = "0.4"

# 데스크톱 전용: GUI PATH 보정 + 네이티브 오디오 캡처 (모바일은 webview getUserMedia 사용)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
cpal = { version = "0.15", features = [] }
hound = "3.5"
rubato = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "1.5"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"
